# aichallenge-2025

./: .gitignore  Dockerfile  docker_build.sh  docker_run.sh  download_latest_submission.py  make_gui.py  packages.txt  readme_AT.md  requirements.txt  run_script.tmux
.github/workflows/: colcon-build-test.yaml
aichallenge/: Makefile  build_autoware.bash  docker-compose.yml  publish.bash  record_rosbag.bash  run_all.sh  run_autoware.bash  run_evaluation.bash  run_multiple_vehicle.bash  run_rviz.bash  run_simulator.bash  start_request.bash  topic_check.sh
aichallenge/python_workspace/: README.md  convert_weight.py  extract_data_from_bag.py  osm2csv.py  requirements.txt  train.py
aichallenge/python_workspace/config/: train.yaml
aichallenge/python_workspace/src/: data.py  loss.py  model.py
aichallenge/python_workspace/tiny_lidar_net/: README.md  convert_weight.py  requirements.txt  train.py
aichallenge/python_workspace/tiny_lidar_net/config/: train.yaml
aichallenge/python_workspace/tiny_lidar_net/lib/: model.py
aichallenge/python_workspace/tiny_lidar_net/src/: train.py
aichallenge/python_ws/: .gitignore  requirements.txt
aichallenge/python_ws/reinforcement_learning/: .gitignore  create_dataset.py  train_bc.py  train_iql.py
aichallenge/python_ws/reinforcement_learning/config/: create_dataset.yaml  train_bc.yaml  train_iql.yaml
aichallenge/python_ws/reinforcement_learning/src/data/: concat_dataset.py  dataset.py  seqence_dataset.py
aichallenge/python_ws/reinforcement_learning/src/model/: actor.py  encoder.py  qnet.py  vnet.py
aichallenge/python_ws/supervised_learning/: convert_weight.py  extract.py  extract_data_from_bag.py  osm2csv.py  preprocess.py  train.py
aichallenge/python_ws/supervised_learning/config/: extract.yaml  extract_data_from_bag.yaml  preprocess.yaml  train.yaml
aichallenge/python_ws/supervised_learning/src/: data.py  loss.py  model.py
aichallenge/python_ws/supervised_learning/src/data/: concat_dataset.py  sequence_dataset.py  transform.py
aichallenge/python_ws/supervised_learning/src/model/: __init__.py  tinylidarnet.py
aichallenge/python_ws/supervised_learning/test/: layers.py  test_datasets.py  test_layers.py  test_models.py
aichallenge/workspace/src/aichallenge_submit/additinal_modules/control/e2e_controller/: package.xml  setup.py
aichallenge/workspace/src/aichallenge_submit/additinal_modules/control/e2e_controller/ckpt/: tinylidarnet_small_weights.npy  tinylidarnet_weights.npy
aichallenge/workspace/src/aichallenge_submit/additinal_modules/control/e2e_controller/config/: tiny_lidar_net_node.param.yaml
aichallenge/workspace/src/aichallenge_submit/additinal_modules/control/e2e_controller/e2e_controller/: tiny_lidar_net_node.py
aichallenge/workspace/src/aichallenge_submit/additinal_modules/control/e2e_controller/e2e_controller/model/: tinylidarnet.py
aichallenge/workspace/src/aichallenge_submit/additinal_modules/control/e2e_controller/launch/: tiny_lidar_net.launch.xml  tiny_lidar_net.xml
aichallenge/workspace/src/aichallenge_submit/additinal_modules/tools/bag_manager_py/: package.xml  setup.py
aichallenge/workspace/src/aichallenge_submit/additinal_modules/tools/bag_manager_py/bag_manager_py/: bag_manager_node.py
aichallenge/workspace/src/aichallenge_submit/additinal_modules/tools/bag_manager_py/config/: bag_manager.param.yaml
aichallenge/workspace/src/aichallenge_submit/additinal_modules/tools/bag_manager_py/launch/: bag_manager.launch.xml
aichallenge/workspace/src/aichallenge_submit/gnss_accuracy_improver/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/gnss_accuracy_improver/config/: aichallenge_integration.yaml  kart_racing_config.json
aichallenge/workspace/src/aichallenge_submit/gnss_accuracy_improver/gnss_accuracy_improver/: __init__.py  gnss_improvement_system.py
aichallenge/workspace/src/aichallenge_submit/gnss_accuracy_improver/launch/: gnss_accuracy_improver.launch
aichallenge/workspace/src/aichallenge_submit/gnss_accuracy_improver/scripts/: gnss_accuracy_improver_node.py
aichallenge/workspace/src/aichallenge_submit/imu_advanced_filter/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/imu_advanced_filter/config/: imu_advanced_filter.yaml
aichallenge/workspace/src/aichallenge_submit/imu_advanced_filter/include/imu_advanced_filter/: imu_advanced_filter_core.hpp
aichallenge/workspace/src/aichallenge_submit/imu_advanced_filter/launch/: imu_advanced_filter.launch.xml
aichallenge/workspace/src/aichallenge_submit/imu_advanced_filter/scripts/: imu_diagnostic_tool.py  quick_setup.sh
aichallenge/workspace/src/aichallenge_submit/imu_advanced_filter/src/: imu_advanced_filter_node.cpp
aichallenge/workspace/src/aichallenge_submit/laserscan_generator/: package.xml
aichallenge/workspace/src/aichallenge_submit/racing_sensor_fusion/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/racing_sensor_fusion/config/: racing_sensor_fusion.yaml
aichallenge/workspace/src/aichallenge_submit/racing_sensor_fusion/launch/: racing_sensor_fusion.launch.xml
aichallenge/workspace/src/aichallenge_submit/racing_sensor_fusion/src/: fusion_diagnostic_tool.cpp  racing_sensor_fusion_node.cpp
aichallenge/workspace/src/aichallenge_submit/tiny_lidar_net_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
aichallenge/workspace/src/aichallenge_tools/bag_manager_py/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_tools/bag_manager_py/bag_manager_py/: bag_manager_core.py  bag_manager_node.py
aichallenge/workspace/src/aichallenge_tools/bag_manager_py/config/: bag_manager.param.yaml
aichallenge/workspace/src/aichallenge_tools/bag_manager_py/launch/: bag_manager.launch.xml
remote/: build_vehicle_autoware.bash  connect_ssh.bash  connect_zenoh.bash  prepare_remote.bash  restart.bash  rviz.bash  zenoh-user.json5
vehicle/: .env.example  Makefile  Readme.md  docker-compose.yml  download_submission.sh  record_rosbag.bash  setup_check.md  setup_check.sh  zenoh.json5
(+69 files in other folders)
