<?xml version="1.0"?>
<package format="3">
  <name>e2e_controller</name>
  <version>0.1.0</version>
  <description>E2E controller node</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>autoware_auto_control_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
