<?xml version="1.0"?>
<package format="3">
  <name>bag_manager_py</name>
  <version>0.1.0</version>
  <description>Node to manage ROS 2 bag recording</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  
 <depend>rclpy</depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
